src/test/deca/syntaxe_contextuelle/invalid/test_pass_3_var_already_exist.deca
// Description:
//    Program testing a var already exist  
//
// Results:
//    error
//
// History:
//    Created on 9/01/2025

{
    int x = 3;
    int x = 2;
}
